# media-share-platform

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  database.py  main.py  pyproject.toml
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  config.js  main.css
frontend/src/components/: ImagePreview.vue
frontend/src/router/: index.js
frontend/src/utils/: clipboard.js
frontend/src/views/: AboutView.vue  CreateView.vue  HomeView.vue  PostView.vue  ProfileView.vue
